samples/_failures_safe/1761341154_a3e46c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_253c51ac.c: In function ‘main’:
./samples/SAFE/__tmp_253c51ac.c:154:13: error: expected declaration or statement at end of input
  154 |             }
      |             ^
./samples/SAFE/__tmp_253c51ac.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_253c51ac.c:154:13: error: expected declaration or statement at end of input
